--- a/.travis.yml
+++ b/.travis.yml
@@ -1,43 +1,22 @@
-language: rust
+language: python
+python:
+  - 2.7
+  - 3.5
+  - 3.6
+  - 3.7
 
-dist: xenial
-
-addons:
-  apt:
-    packages:
-      - mosquitto
-      - openjdk-8-jdk
-
-before_install:
-  - sudo update-alternatives --set java  /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
-  - sudo update-alternatives --set javac  /usr/lib/jvm/java-8-openjdk-amd64/bin/javac
-
-before_script:
-  - if [ "$TRAVIS_RUST_VERSION" == "stable" ]; then
-      rustup component add rustfmt;
-      rustup component add clippy;
-    fi
-
-rust:
-  - stable
-  - beta
-  - nightly
+install:
+  - pip install codecov
 
 script:
-  - if [ "$TRAVIS_RUST_VERSION" == "stable" ]; then
-      cargo fmt --all -- --check;
-    fi
-  - if [ "$TRAVIS_RUST_VERSION" == "stable" ]; then
-      cargo clippy --all-targets --all-features -- -D warnings;
-    fi
-  - cargo build --all
-  - cargo test --all
-  - pwd
-  - (cd platforms/hermes-kotlin && ./gradlew --console plain jar -Pdebug)
-  - (cd platforms/hermes-kotlin && ./gradlew --console plain test -Pdebug)
-  - (cd platforms/hermes-python && ./run-tests-travis.sh)
-  - (cd platforms/hermes-javascript && npm install && npm start)
+  - curl https://sh.rustup.rs -sSf | sh
+  - cargo build
+  - cp target/debug/libhermes_ffi.so platforms/hermes-python/hermes_python/dylib
+  - mkdir platforms/hermes-python/tests/roundtrip/debug
+  - cp target/debug/libhermes_ffi_test.so platforms/hermes-python/tests/roundtrip/debug
+  - cd platforms/hermes-python
+  - pip install -r requirements/test
+  - python setup.py test
 
-matrix:
-  allow_failures:
-  - rust: nightly
+after_success:
+  - codecov
