Add coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
   - mkdir ~/rust-installer
   - curl -sL https://static.rust-lang.org/rustup.sh -o ~/rust-installer/rustup.sh
   - sh ~/rust-installer/rustup.sh -y
+  - source $HOME/.cargo/env
   - cargo build
   - cp target/debug/libhermes_ffi.so platforms/hermes-python/hermes_python/dylib
   - mkdir platforms/hermes-python/tests/roundtrip/debug
