--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
   - cd platforms/hermes-python
   - pip install -r requirements/tests.txt
   - python setup.py test
+  - codecov
 
 after_success:
   - codecov
